# Hlink

./: README.md  TESTING.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: android-build.sh  android-dev.sh  android-install.sh
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: clipboard.rs  discovery.rs  lib.rs  main.rs  server.rs  sync.rs
src/components/: ClipHistory.tsx  DeviceList.tsx  QrConnect.tsx
