[package]
name = "hlink"
version = "0.1.0"
description = "局域网跨设备剪贴板共享"
authors = ["zdy520"]
edition = "2021"

[lib]
name = "hlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"

# async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.24" }  # 局域网用 ws://, 不需要 TLS

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

# arboard + socket2 仅在桌面端编译（不支持 Android / iOS）
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
arboard = "3"
socket2 = { version = "0.5", features = ["all"] }
